<resources>

    <string name="app_name">Parsing</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
	<string name="hint_name">Name</string>
	<string name="hint_desc">Description</string>
	<string name="hint_cost">Cost</string>
	<string name="btnNext">Next</string>
	<string name="btnPrev">Previous</string>
    <string name="btnUpdate">Update</string>
	<string name="btnDelete">Delete</string>
	<string name="btnAdd">Add</string>
	<string name="btnNew">New</string>
	
	<string name="alternate_title">An alternate title that is long</string>
    <string name="toggle_title">Toggle title</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_search">Search</string>
    <string name="menu_share">Share</string>
</resources>